# springresearch_reddit

./: .env.example  .gitignore  README.md  claude.md  config.yml.example  pyproject.toml  requirements.txt  rss_reader.py  setup.py
src/: __init__.py  cli.py  config.py  fetcher.py  multi_validator.py  reddit_auth.py  reddit_client.py  storage.py
